{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 228,
  "lineage": "eafa9d93-5e34-0cb0-661f-1a9e5c457dd0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "your_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:186765127973:loadbalancer/app/java-app-load-balancer/4e79f567c514baed",
            "arn_suffix": "app/java-app-load-balancer/4e79f567c514baed",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "java-app-load-balancer-1392854653.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:186765127973:loadbalancer/app/java-app-load-balancer/4e79f567c514baed",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "java-app-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00eeb0a23d14f5eb6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03e71207eb0b3520d"
              },
              {
                "subnet_id": "subnet-0a2c8753df8be86b9"
              }
            ],
            "subnets": [
              "subnet-03e71207eb0b3520d",
              "subnet-0a2c8753df8be86b9"
            ],
            "vpc_id": "vpc-046a9ba86fe64a343",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.your_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "your_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:186765127973:listener/app/java-app-load-balancer/4e79f567c514baed/b2dda2c559a65f7c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:186765127973:targetgroup/java-app-target-group/d4c289c4d391b23c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:186765127973:listener/app/java-app-load-balancer/4e79f567c514baed/b2dda2c559a65f7c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:186765127973:loadbalancer/app/java-app-load-balancer/4e79f567c514baed",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.your_load_balancer",
            "aws_lb_target_group.your_target_group",
            "aws_security_group.your_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "your_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:186765127973:targetgroup/java-app-target-group/d4c289c4d391b23c",
            "arn_suffix": "targetgroup/java-app-target-group/d4c289c4d391b23c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:186765127973:targetgroup/java-app-target-group/d4c289c4d391b23c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "java-app-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-046a9ba86fe64a343"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "your_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:186765127973:security-group/sg-00eeb0a23d14f5eb6",
            "description": "Your security group description",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00eeb0a23d14f5eb6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "java-app-security-group",
            "name_prefix": "",
            "owner_id": "186765127973",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-046a9ba86fe64a343"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}